--- a/package.json
+++ b/package.json
@@ -6,7 +6,6 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
-    "aws-iot-device-sdk": "^1.0.9",
     "body-parser": "~1.13.2",
     "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
@@ -15,6 +14,7 @@
     "morgan": "~1.6.1",
     "onoff": "^1.0.3",
     "serve-favicon": "~2.3.0",
-    "socket.io": "^1.3.7"
+    "socket.io": "^1.3.7",
+    "wemo-client": "^0.6.2"
   }
 }
